set path to options.js

--- a/views/options.html
+++ b/views/options.html
@@ -9,6 +9,6 @@
     <button id="save">Save</button> <button id="reset">Reset</button>
     <div id="status"></div>
 
-    <script type="text/javascript" src="options.js"></script>
+    <script type="text/javascript" src="../lib/options.js"></script>
 </body>
 </html>
