--- a/views/options.html
+++ b/views/options.html
@@ -2,7 +2,7 @@
 <head>
     <title>Options</title>
     <script type="text/javascript" src="../lib/vendor/jscolor/jscolor.js"></script>
-    <link rel="stylesheet" type="text/css" href="../assets/css/temp.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/themes.css">
 <body>
   <div class="container">
       <div class="options">
