--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -1,177 +1,109 @@
-/* Common stuff */
-.picker-wrapper, 
-.slide-wrapper {
-    position: relative;
-    float: left;
-}
-.picker-indicator,
-.slide-indicator {
-    position: absolute;
-    left: 0;
-    top: 0;
-    pointer-events: none;
-}
-.picker,
-.slide {
-    cursor: crosshair;
-    float: left;
+.redButton{
+  display: inline-block;
+  width:100px;
+  height:40px;
+  background-color:red;
+  text-transform: uppercase;
+  position:relative;
+  padding:0px;
+  line-height:10px;
+  text-align:center;
+  text-decoration: none !important;
+  font-weight:bold;
+  color:#fff;
+  font-size:14px;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  bottom:0;
+  margin:0;
+
+  transition:0.15s linear;
+  -moz-transition:0.15s linear;
+  -webkit-transition:0.15s linear;
+
+  box-shadow:0 5px 0 darkred,0 0 10px rgba(0,0,0,0.3) inset, 8px 10px 4px rgba(0,0,0,0.4);
+  -moz-box-shadow:0 5px 0 darkred,0 0 10px rgba(0,0,0,0.3) inset, 8px 10px 4px rgba(0,0,0,0.4);
+  -webkit-box-shadow:0 5px 0 darkred,0 0 10px rgba(0,0,0,0.3) inset, 8px 10px 4px rgba(0,0,0,0.4);
+
+  border-radius:30%;
+  -moz-border-radius:30%;
+  -webkit-border-radius:30%;
 }
 
-/* Default skin */
+.redButton:active{
+  bottom:-5px;
 
-.cp-default {
-    background-color: gray;
-    padding: 12px;
-    box-shadow: 0 0 40px #000;
-    border-radius: 15px;
-    float: left;
-}
-.cp-default .picker {
-    width: 200px;
-    height: 200px;
-}
-.cp-default .slide {
-    width: 30px;
-    height: 200px;
-}
-.cp-default .slide-wrapper {
-    margin-left: 10px;
-}
-.cp-default .picker-indicator {
-    width: 5px;
-    height: 5px;
-    border: 2px solid darkblue;
-    -moz-border-radius: 4px;
-    -o-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    opacity: .5;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
-    filter: alpha(opacity=50);
-    background-color: white;
-}
-.cp-default .slide-indicator {
-    width: 100%;
-    height: 10px;
-    left: -4px;
-    opacity: .6;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-    filter: alpha(opacity=60);
-    border: 4px solid lightblue;
-    -moz-border-radius: 4px;
-    -o-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    background-color: white;
+  box-shadow:0 0 0 darkred,0 0 20px rgba(0,0,0,0.5) inset;
+  -moz-box-shadow:0 0 0 darkred,0 0 20px rgba(0,0,0,0.5) inset;
+  -webkit-box-shadow:0 0 0 darkred,0 0 20px rgba(0,0,0,0.5) inset;
 }
 
-/* Small skin */
-
-.cp-small {
-    padding: 5px;
-    background-color: white;
-    float: left;
+.btn {
+    -moz-box-shadow: inset 0px 1px 0px 0px #bbdaf7;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #bbdaf7;
+    box-shadow: inset 0px 1px 0px 0px #bbdaf7;
+    background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #7f7f7f), color-stop(1, #535353) );
+    background: -moz-linear-gradient( center top, #7f7f7f 5%, #535353 100% );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#535353');
+    background-color: #79bbff;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    cursor: pointer;
     border-radius: 5px;
-}
-.cp-small .picker {
-    width: 100px;
-    height: 100px;
-}
-.cp-small .slide {
-    width: 15px;
-    height: 100px;
-}
-.cp-small .slide-wrapper {
-    margin-left: 5px;
-}
-.cp-small .picker-indicator {
-    width: 1px;
-    height: 1px;
-    border: 1px solid black;
-    background-color: white;
-}
-.cp-small .slide-indicator {
-    width: 100%;
-    height: 2px;
-    left: 0px;
-    background-color: black;
+    display: inline-block;
+    color: #ffffff;
+    font-family: Trebuchet MS;
+    font-size: 10pt;
+    font-weight: bold;
+    padding: 5px 17px;
+    text-decoration: none;
+    text-shadow: 1px 1px 0px #1b4a7a;
 }
 
-/* Fancy skin */
+.btn:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #7f7f7f), color-stop(1, #ededed) );
+  background:-moz-linear-gradient( center top, #7f7f7f 5%, #ededed 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#ededed');
+  background-color:#52BFFF;
+}
 
-.cp-fancy {
-    padding: 10px;
-/*    background-color: #C5F7EA; */
-    background: -webkit-linear-gradient(top, #aaa 0%, #222 100%);   
+.btn:active {
+  position:relative;
+  top:2px;
+}
+
+body{
+    background-image:url(../images/wood.jpg);
+}
+
+.container {
+  width:300px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-top:300px;
+}
+
+label {
     float: left;
-    border: 1px solid #999;
-    box-shadow: inset 0 0 10px white;
-}
-.cp-fancy .picker {
-    width: 200px;
-    height: 200px;
-}
-.cp-fancy .slide {
-    width: 30px;
-    height: 200px;
-}
-.cp-fancy .slide-wrapper {
-    margin-left: 10px;
-}
-.cp-fancy .picker-indicator {
-    width: 24px;
-    height: 24px;
-    background-image: url(http://cdn1.iconfinder.com/data/icons/fugue/bonus/icons-24/target.png);
-}
-.cp-fancy .slide-indicator {
-    width: 30px;
-    height: 31px;
-    left: 30px;
-    background-image: url(http://cdn1.iconfinder.com/data/icons/bluecoral/Left.png);
+    width: 5em;
+    padding-left: 30px;
+    text-align: left;
 }
 
-/* Normal skin */
+div.option {
+    padding-top: 5px;
+}
 
-.cp-normal {
-    padding: 10px;
-    background-color: white;
-    float: left;
-    border: 4px solid #d6d6d6;
-    box-shadow: inset 0 0 10px white;
+.options {
+    background: #F8F8FF;
+    border: 1px #CCC solid;
+    border-radius: 0px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+   -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 5px;
 }
-.cp-normal .picker {
-    width: 200px;
-    height: 200px;
-}
-.cp-normal .slide {
-    width: 30px;
-    height: 200px;
-}
-.cp-normal .slide-wrapper {
-    margin-left: 10px;
-}
-.cp-normal .picker-indicator {
-    width: 5px;
-    height: 5px;
-    border: 1px solid gray;
-    opacity: .5;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
-    filter: alpha(opacity=50);
-    background-color: white;
-    pointer-events: none;
-}
-.cp-normal .slide-indicator {
-    width: 100%;
-    height: 10px;
-    left: -4px;
-    opacity: .6;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-    filter: alpha(opacity=60);
-    border: 4px solid gray;
-    background-color: white;
-    pointer-events: none;
+
+.buttons {
+  margin-left: 110px;
 }
