--- a/views/options.html
+++ b/views/options.html
@@ -4,19 +4,21 @@
     <script type="text/javascript" src="../lib/vendor/jscolor/jscolor.js"></script>
     <link rel="stylesheet" type="text/css" href="../assets/css/themes.css">
 <body>
+  <h1 class ="heading">Customize ScrollPad (colors are Hex Values)</h1>
+	
   <div class="container">
       <div class="options">
         <div class="option">
             <label for="background"> Border: </label>
-            <input id="border_colour" name="background" class="color {hash:true}" value="18EDDF">
+            <input id="border_colour" name="background" class="color" value="18EDDF">
         </div>
         <div class="option">
             <label for="border">bgcolor: </label>
-            <input id="background_colour" name="border" class="color {hash:true}" value="000000">
+            <input id="background_colour" name="border" class="color" value="000000">
         </div>
         <div class="option">
             <label for="view"> View: </label>
-            <input id="inner_colour" name="view" class="color {hash:true}" value="FFFFFF"> <br/>
+            <input id="inner_colour" name="view" class="color" value="FFFFFF"> <br/>
         </div>
         <div class="buttons">
             <button id="save" class="btn">Save</button>
