added mock canvas to options page for live actions

--- a/views/options.html
+++ b/views/options.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/themes.css">
 <body>
   <h1 class ="heading">Customize ScrollPad (colors are Hex Values)</h1>
-	
   <div class="container">
+      <canvas id="spbg" width="200" height="200" ></canvas>
+      <canvas id="spview" width="100" height="100" ></canvas>
+
+
       <div class="options">
         <div class="option">
             <label for="background"> Border: </label>
