--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -79,7 +79,7 @@ body{
   width:300px;
   margin-left:auto;
   margin-right:auto;
-  padding-top:100px;
+  padding-top:30px;
 }
 
 label {
@@ -94,12 +94,12 @@ div.option {
 }
 
 .options {
+    margin-top: 220px;
     background: #F8F8FF;
     border: 1px #CCC solid;
     border-radius: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    margin-top: 20px;
     margin-bottom: 20px;
    -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 5px;
 }
@@ -116,9 +116,41 @@ div.option {
 }
 
 h1.heading  {
-  font-family: Trebuchet MS;
+  font-family: Trebuchet MS; 
   font-size: 25pt;
   font-weight: bold;
   text-decoration: none;
   text-shadow: 1px 1px 0px #1b4a7a;
+}
+
+#spbg {
+    margin-left: 50px;
+    z-index: 2147483648;
+    position: fixed;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    overflow: hidden;
+    opacity: 0.8;
+    background-color: rgb(0, 0, 0);
+    -webkit-box-shadow: rgb(24, 237, 223) 0px 0px 8px 4px;
+    background-position: initial initial;
+    background-repeat: initial initial;
+}
+
+#spview {
+    margin-left: 100px;
+    margin-top: 50px;
+    z-index: 2147483648;
+    position: fixed;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    overflow: hidden;
+    opacity: 0.8;
+    background-color: rgb(255, 255, 255);
+    background-position: initial initial;
+    background-repeat: initial initial;
 }
