--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -95,8 +95,8 @@ div.option {
 
 .options {
     margin-top: 220px;
-    background: #F8F8FF;
-    border: 1px #CCC solid;
+    background: #C2C4C3;
+    border: 1px #000 solid;
     border-radius: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
