--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -126,7 +126,7 @@ h1.heading  {
 #spbg {
     margin-left: 50px;
     z-index: 2147483648;
-    position: fixed;
+    position: absolute;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -143,7 +143,7 @@ h1.heading  {
     margin-left: 100px;
     margin-top: 50px;
     z-index: 2147483648;
-    position: fixed;
+    position: absolute;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
