--- a/views/options.html
+++ b/views/options.html
@@ -29,6 +29,18 @@
         </div>
       </div>
   </div>
-    <script type="text/javascript" src="../lib/options.js"></script>
+  <div id="credits">
+    <strong>
+      <i>ScrollPad!</i> 
+      <span>is written by </span> 
+      <a href="https://github.com/jigneshhk">Jignesh Kakadiya</a> 
+      <span>and</span> 
+      <a href="https://github.com/pankajb64">Pankaj Bhambhani</a> 
+      <span>(get </span>
+      <a href="https://github.com/jigneshhk/ScrollPad">source!</a>
+      <span>)</span>
+    </strong>
+  </div>
+  <script type="text/javascript" src="../lib/options.js"></script>
 </body>
 </html>
