Removed target=_blank

--- a/views/options.html
+++ b/views/options.html
@@ -33,9 +33,9 @@
     <strong>
       <i>ScrollPad!</i> 
       <span>is written by </span> 
-      <a href="https://github.com/jigneshhk" target="_blank">Jignesh Kakadiya</a> 
+      <a href="https://github.com/jigneshhk">Jignesh Kakadiya</a> 
       <span>and</span> 
-      <a href="https://github.com/pankajb64" target="_blank">Pankaj Bhambhani</a> 
+      <a href="https://github.com/pankajb64">Pankaj Bhambhani</a> 
       <span>(get </span>
       <a href="https://github.com/jigneshhk/ScrollPad">source!</a>
       <span>)</span>
