--- a/views/options.html
+++ b/views/options.html
@@ -41,6 +41,7 @@
       <span>)</span>
     </strong>
   </div>
+  <script type="text/javascript" src="../lib/util.js"></script>
   <script type="text/javascript" src="../lib/options.js"></script>
 </body>
 </html>
